# rust-mail2

./: README.md  components.d.ts  eslint.config.mjs  index.html  package.json  quasar.config.js  vite.config.mts
.zed/: tasks.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  system.rs
src-tauri/src/db/: account.rs
src-tauri/src/db/entities/: Cargo.toml
src-tauri/src/db/entities/src/: labels.rs  lib.rs  prelude.rs
src-tauri/src/db/migration/: Cargo.toml
src-tauri/src/db/migration/src/: lib.rs  m20240808_135943_init_db.rs
src-tauri/src/sys/: mail_const.rs  mail_pathes.rs  mod.rs
src-tauri/src/system/: mail_pathes.rs  mail_tray.rs
src/components/: MailList.vue  MailListPage.vue  UserInfo.vue
src/layouts/: MainLayout.vue
src/pages/: AddAccount.vue  MailDetailPage.vue  MailListPage.vue  SettingPage.vue
src/router/: routes.js
