[package]
name = "rust-mail2"
version = "0.1.0"
description = "A Mail App build by Tauri and Rust."
authors = ["Dr.Guo"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.25", features = [] }
tauri-plugin-clipboard-manager = "2.0.0-beta.0"
tauri-plugin-dialog = "2.0.0-beta.0"
tauri-plugin-fs = "2.0.0-beta.0"
tauri-plugin-log = "2.0.0-beta.0"
tauri-plugin-os = "2.0.0-beta.0"
tauri-plugin-store = "2.0.0-beta.0"
tauri-plugin-stronghold = "2.0.0-beta.0"
tauri-plugin-notification = "2.0.0-beta"
sea-orm = "0.12.15"
tokio = "1.39.2"
lettre = "0.11.7"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.0.0-beta.0"
tauri-plugin-global-shortcut = "2.0.0-beta.0"
tauri-plugin-single-instance = "2.0.0-beta.0"
tauri-plugin-updater = "2.0.0-beta.0"
tauri-plugin-window-state = "2.0.0-beta.0"
