[package]
name = "rust-mail2"
version = "0.1.0"
description = "A Mail App build by Tauri and Rust."
authors = ["Dr.Guo"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.3", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-log = "2.0.0-rc"
sea-orm = "1.0.0"
tokio = "1.39.2"
lettre = "0.11.7"
directories = "5.0.1"
log4rs = "1.3.0"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2.0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
